--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -10,6 +10,7 @@ h1 {
     letter-spacing: 8px;
     background-image: url(https://images.hdqwalls.com/download/tram-in-downtown-toronto-2e-1920x1080.jpg);
     text-align: right;
+    width: 100%;
     margin: 0 0 40px 0;
     padding: 60px 30px;
 }
@@ -17,6 +18,7 @@ h1 {
 img {
     height: 800px;
     margin: 20px;
+    width: 100%
     
 }
 
