--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -10,19 +10,21 @@ h1 {
     letter-spacing: 8px;
     background-image: url(https://images.hdqwalls.com/download/tram-in-downtown-toronto-2e-1920x1080.jpg);
     text-align: right;
-    height: 300px;
+    height: 400px;
     margin: 0 0 40px 0;
-    padding: 60px 30px;
+    padding: 30px 30px 0 0;
 }
 
 img {
-    height: 500px;
+    
     margin: 20px;
-
+    display: inline-block;
+    height: 500px;
     
 }
 
 .photo {
     margin: 0 auto;
     text-align: center;
+    
 }
