--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -10,7 +10,7 @@ h1 {
 	letter-spacing: 8px;
 	text-align: right;
 	height: 400px;
-	width: 1vw;
+	width: auto;
 	margin: 0 0 50px;
 	padding: 30px 30px 0 0;
     background-image: url(https://images.hdqwalls.com/download/tram-in-downtown-toronto-2e-1920x1080.jpg);
