--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -13,7 +13,7 @@ h1 {
 	width: auto;
 	margin: 0 0 50px;
 	padding: 30px 30px 0 0;
-    background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2013/02/26/45599/6cb7e7841d96596b326f9ea1d12b0583.jpg);
+    background-image: url(https://wallpapermemory.com/uploads/805/city-wallpaper-full-hd-1920x1080-480668.jpg);
 }
 
 img {
